fixed nav not showing on nav open

--- a/css/queries.css
+++ b/css/queries.css
@@ -126,6 +126,7 @@
   /* MOBILE NAVIGATION*/
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
 
   .main-nav {
@@ -159,6 +160,7 @@
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
+    transform: translateX(0);
   }
 
   .nav-open .icon-mobile-nav[name="close-outline"] {
